--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -666,6 +666,20 @@ dependencies {
     tomcat "org.apache.tomcat:tomcat:9.0.37@zip"
 }
 
+task createTestkitFiles {
+    def outputDir = file("$buildDir/testkit")
+
+    inputs.files sourceSets.main.runtimeClasspath
+    inputs.files configurations.jacocoRuntime
+    outputs.dir outputDir
+
+    doLast {
+        outputDir.mkdirs()
+        file("$outputDir/testkit-classpath.txt").text = sourceSets.main.runtimeClasspath.join("\n")
+        file("$outputDir/testkit-gradle.properties").text = "org.gradle.jvmargs=-javaagent:${configurations.jacocoRuntime.asPath}=destfile=$buildDir/jacoco//integrationTest.exec,output=file"
+    }
+}
+
 cargo {
     containerId "tomcat9x"
 
@@ -684,13 +698,15 @@ cargo {
             property 'cargo.tomcat.connector.clientAuth', false
             property 'cargo.protocol', 'https'
             property 'cargo.servlet.port', 8443
-            property 'cargo.start.jvmargs',"-javaagent:${configurations.jacocoRuntime.asPath}=destfile=$buildDir/jacoco/integrationTest.exec,output=file,append=true"
+            //property 'cargo.start.jvmargs',"-javaagent:${configurations.jacocoRuntime.asPath}=destfile=$buildDir/jacoco/integrationTest.exec,output=file,append=true"
 
         }
     }
 }
 
+cargoRunLocal.dependsOn createTestkitFiles
 cargoRunLocal.dependsOn bootWar
+cargoStartLocal.dependsOn createTestkitFiles
 cargoStartLocal.dependsOn bootWar
 cargoStartLocal.mustRunAfter "integrationTestClasses"
 cargoStartLocal.mustRunAfter "enhance"
