--- a/fineract-provider/dependencies.gradle
+++ b/fineract-provider/dependencies.gradle
@@ -124,7 +124,6 @@ dependencies {
             'org.mockito:mockito-junit-jupiter',
             'org.junit.platform:junit-platform-runner', // required to be able to run tests directly under Eclipse, see FINERACT-943 & FINERACT-1021
             'io.github.classgraph:classgraph',
-            'org.jacoco:org.jacoco.agent',
             'org.awaitility:awaitility'
             )
     testImplementation('org.mock-server:mockserver-junit-jupiter') {
@@ -141,5 +140,6 @@ dependencies {
         exclude group: 'com.jayway.jsonpath', module: 'json-path'
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testRuntime files("$buildDir/testkit")
     jacocoRuntime "org.jacoco:org.jacoco.agent:${jacoco.toolVersion}:runtime"
 }
